[tool.poetry]
name = "who-is-asia"
version = "1.0.0"
description = "Who is Asia"
authors = [
    "Federico Bertola"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/fbertola/who-is-asia"

# TODO: add keywords
keywords = ["keyword"]

# TODO: add classifiers
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Requirements
[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"
Keras = "^2.4.3"
scikit-learn = "^0.24.0"
tensorflow = "^2.4.0"
pandas = "^1.2.0"
imgaug = "^0.4.0"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-mock = "^1.9"
black = "^19.10b0"
pytest-sugar = "^0.9.2"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
nox = "^2020.5.24"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

